trunk/Archive2/be/6978960fca691b/output
main.cpp: In function 'int main()':
main.cpp:5:40: error: invalid operands of types 'int' and '<unresolved overloaded function type>' to binary 'operator<<'
     std::cout << 42 and 0x0123 << std::endl;
                                        ^
main.cpp:6:43: error: invalid operands of types 'int' and '<unresolved overloaded function type>' to binary 'operator<<'
     std::cout << 42 bitand 0x0123 << std::endl;
                                           ^
