trunk/Archive2/be/6978960fca691b/main.cpp
#include <iostream>

int main()
{
    std::cout << 42 and 0x0123 << std::endl;
    std::cout << 42 bitand 0x0123 << std::endl;
    return 0;
}